; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/fmgr/extr_dfmgr.c_load_file.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/fmgr/extr_dfmgr.c_load_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @load_file(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %2
  %9 = load i8*, i8** %3, align 8
  %10 = call i32 @check_restricted_library_name(i8* %9)
  br label %11

11:                                               ; preds = %8, %2
  %12 = load i8*, i8** %3, align 8
  %13 = call i8* @expand_dynamic_library_name(i8* %12)
  store i8* %13, i8** %5, align 8
  %14 = load i8*, i8** %5, align 8
  %15 = call i32 @internal_unload_library(i8* %14)
  %16 = load i8*, i8** %5, align 8
  %17 = call i32 @internal_load_library(i8* %16)
  %18 = load i8*, i8** %5, align 8
  %19 = call i32 @pfree(i8* %18)
  ret void
}

declare dso_local i32 @check_restricted_library_name(i8*) #1

declare dso_local i8* @expand_dynamic_library_name(i8*) #1

declare dso_local i32 @internal_unload_library(i8*) #1

declare dso_local i32 @internal_load_library(i8*) #1

declare dso_local i32 @pfree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
